Bug 415669 - Vanishing Point assistant, angle density slider has not-working up/down controls.
Summary: Vanishing Point assistant, angle density slider has not-working up/down contr...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Assistants (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Debian stable Linux
: NOR minor
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-29 10:17 UTC by Ahab Greybeard
Modified: 2020-04-02 13:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2019-12-29 10:17:51 UTC
SUMMARY
This is seen on all versions for the Linux appimage and the Windows portable .zip packages from 4.2.6 up to the latest Dec 28 4.3.0 prealpha packages.

For the Vanishing Point assistant tool, in the Tool Options docker, the angle Density control slider works as a slider and a value can also be entered by typing.
However, the up/down controls at the end of the slider do not work.

The up and down controls are both shown as active with the slider between 1 and 179 degrees.
At 180 degrees, the down control is shown as active and the up control is greyed out.
At 1 degree, the up control is shown as active and the down control is greyed out.

The Global Opacity control below the angle Density control has an identical style UI but its up/down controls do work.

The form of the cursor, when placed over the up/down controls does not change from the form didplayed over the slider. But this is also true for the Global Opacity control where they do work.


STEPS TO REPRODUCE
See Summary description

OBSERVED RESULT
See Summary description

EXPECTED RESULT
They should work.

SOFTWARE/OS VERSIONS
Krita

 Version: 4.3.0-prealpha (git 3f0ff1a)
 Languages: en_GB, en, en, en_GB, en
 Hidpi: true

Qt

  Version (compiled): 5.12.5
  Version (loaded): 5.12.5

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.19.0-6-amd64
  Pretty Productname: Debian GNU/Linux 10 (buster)
  Product Type: debian
  Product Version: 10

OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "GeForce GTX 750 Ti/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 418.74" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

Hardware Information

  GPU Acceleration: auto
  Memory: 16039 Mb
  Number of Cores: 8
  Swap Location: /tmp

Current Settings

  Current Swap Location: /tmp
  Undo Enabled: 1
  Undo Stack Limit: 18
  Use OpenGL: 1
  Use OpenGL Texture Buffer: 1
  Use AMD Vectorization Workaround: 0
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 360
  Use Backup Files: 1
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Use Win8 Pointer Input: 0
  Use RightMiddleTabletButton Workaround: 0
  Levels of Detail Enabled: 0
  Use Zip64: 0

ADDITIONAL INFORMATION
Comment 1 Rebecca Breu 2019-12-29 12:17:57 UTC
I can confirm this, both that the arrows aren't working on the angle input, and that the cursor stays in slider mode over the arrows for both angle and opacity input.

The arrow buttons should work, but also, the cursor should change back to regular over the arrows.
Comment 2 Ahab Greybeard 2019-12-30 15:23:50 UTC
Further observation shows that this particular fault is not limited to the vanishing point assistant tool:

The Multibrush tool has many Type options that all have an angular control slider. In all of these, the angular slider has the same problem of not-working up/down arrows.

(The Transform-Rotate tool has angular sliders but these do have working up/down arrows.)

There may be others that I've missed.

Also, for all the slider controls of the different types of multibrush, the cursor stays in the slider mode appearance when it is over the up/down arrows.
(Note: this is also the case for the Layer Opacity slider control and for other slider controls that have up/down control arrows at the end, e.g Transform - Rotate tool.)
Comment 3 Scott Petrovic 2020-03-26 15:28:37 UTC
Git commit db1cc49ba2f4d4f7287e852a6c4ec3d5922d5d4c by Scott Petrovic.
Committed on 26/03/2020 at 15:28.
Pushed by scottpetrovic into branch 'master'.

Change cursor to pointer on up and down arrow for sliderbox input

Also fixed a couple sliders that had non-working up and down arrows

M  +13   -1    libs/widgetutils/kis_slider_spin_box.cpp
M  +1    -1    plugins/assistants/Assistants/kis_assistant_tool.cc
M  +1    -1    plugins/tools/basictools/kis_tool_multihand.cpp

https://invent.kde.org/kde/krita/commit/db1cc49ba2f4d4f7287e852a6c4ec3d5922d5d4c
Comment 4 Halla Rempt 2020-04-02 13:34:31 UTC
Git commit 36126e7b1d0ef714cbc37328dfcdf6809eb56bde by Boudewijn Rempt, on behalf of Scott Petrovic.
Committed on 02/04/2020 at 13:09.
Pushed by rempt into branch 'krita/4.3'.

Change cursor to pointer on up and down arrow for sliderbox input

Also fixed a couple sliders that had non-working up and down arrows

(cherry picked from commit db1cc49ba2f4d4f7287e852a6c4ec3d5922d5d4c)

M  +13   -1    libs/widgetutils/kis_slider_spin_box.cpp
M  +1    -1    plugins/assistants/Assistants/kis_assistant_tool.cc
M  +1    -1    plugins/tools/basictools/kis_tool_multihand.cpp

https://invent.kde.org/kde/krita/commit/36126e7b1d0ef714cbc37328dfcdf6809eb56bde