Change cursor to pointer on up and down arrow for sliderbox input

Also fixed a couple sliders that had non-working up and down arrows
BUG:415669

(cherry picked from commit db1cc49ba2f4d4f7287e852a6c4ec3d5922d5d4c)